tests/out/error/array/expr_init.in.bt
arr := ['a', 1, true]
